--- a/app/src/main/res/layout/vh_main_linear.xml
+++ b/app/src/main/res/layout/vh_main_linear.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/selectableItemBackground"
+    android:background="?android:attr/selectableItemBackground"
     android:orientation="horizontal"
     android:paddingBottom="8dp"
     android:paddingEnd="16dp"
     android:paddingStart="16dp"
     android:paddingTop="8dp"
-    android:id="@+id/ddd"
     tools:ignore="ContentDescription">
 
     <android.support.v7.widget.CardView
