--- a/app/src/main/res/layout/vh_main_grid.xml
+++ b/app/src/main/res/layout/vh_main_grid.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:foreground="?attr/selectableItemBackground"
+    android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
     tools:ignore="ContentDescription,UseCompoundDrawables">
 
