--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -110,6 +110,7 @@
 
     <item
         android:id="@+id/settings"
+        android:icon="@drawable/ic_settings"
         android:title="@string/menu_settings"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
