--- a/app/src/main/res/layout/vh_comparison.xml
+++ b/app/src/main/res/layout/vh_comparison.xml
@@ -11,7 +11,7 @@
     android:paddingTop="6dp"
     tools:ignore="ContentDescription">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true" />
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
