--- a/app/src/main/res/layout/vh_main_linear.xml
+++ b/app/src/main/res/layout/vh_main_linear.xml
@@ -12,7 +12,7 @@
     android:paddingTop="8dp"
     tools:ignore="ContentDescription">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:cardCornerRadius="4dp">
@@ -24,7 +24,7 @@
             android:adjustViewBounds="true"
             android:transitionName="thumbnail" />
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
